work1 增加描述 持續更新中

--- a/work1.html
+++ b/work1.html
@@ -82,6 +82,7 @@
                   <li>JavaScript互動設計</li>
                   <li>解決網頁跑版與性能問題</li>
                   <li>SEO優化</li>
+                  <li>持續更新中</li>
                 </ul>
 
                 <p><a href="https://www.niceclinic.tw/" class="readmore">查看網站</a></p>
